<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    tools:context=".ListFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/blue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:padding="@dimen/padding_button"
        android:text="@string/blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/green_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:padding="@dimen/padding_button"
        android:text="@string/green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/red_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:padding="@dimen/padding_button"
        android:text="@string/red" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/black_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:padding="@dimen/padding_button"
        android:text="@string/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yellow_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:padding="@dimen/padding_button"
        android:text="@string/yellow" />

    <TextView
        android:id="@+id/message_screen_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_screen"
        style="@style/text_edit_view_style" />

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_number"
        android:inputType="number"
        style="@style/text_edit_view_style"  />

</LinearLayout>